part 3 (mm syntax highlighting!)